# alear

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alear.sln  alear.vcxproj  alear.vcxproj.filters  symbols.yml
cmake/: ppu.cmake  sdk.cmake  sprx.cmake
code/: corelib.h  cwlib.h  main.cpp
code/Alear/: Alear.cpp  Alear.h  AlearConfig.cpp  AlearConfig.h  AlearDebugCamera.cpp  AlearDebugCamera.h  AlearHooks.h  AlearNetworking.cpp  AlearNetworking.h  AlearSR.h  AlearSerialization.cpp  AlearSerialization.h  AlearShared.cpp  AlearShared.h  AlearStartMenu.cpp  AlearStartMenu.h  AlearSync.cpp  AlearSync.h  AlearUpdater.cpp  AlearUpdater.h  AlearVM.cpp  AlearVM.h  AnimationSystem.cpp  AnimationSystem.h  AviHeader.inl  BikiniBottom.cpp  CheckpointStyles.h  DrawFluids.cpp  DrawFluids.h  ExplosiveStyles.h  FileWatcher.cpp  FileWatcher.h  GfxMaterialParameters.cpp  GooeyNetworkExtensions.cpp  Hermite.cpp  Hermite.h  InventoryItemRequest.cpp  InventoryItemRequest.h  Launcher.cpp  Launcher.h  (+70 more)
code/Alear/asm/: alear_levelupdate_hook.s  alearcam_hooks.s  alearvm_hook.s  animstyles_hooks.s  creatureupdate_hook.s  divergence_hook.s  emote_hooks.s  explosion_hooks.s  getslapsound_hook.s  gfxbind_hook.s  global_hooks.s  gooey_hooks.s  gsub_hooks.s  logic_hooks.s  outfitlist_hook.s  pin_hooks.s  podstyles_hooks.s  popit_hooks.s  portal_hook.s  resource_hooks.s  thing_hook.s
code/Alear/asm/macros/: fnptr.s
code/Alear/customization/: Emotes.cpp  Emotes.h  PodStyles.cpp  PodStyles.h  PoppetStyles.cpp  PoppetStyles.h  SlapStyles.cpp  SlapStyles.h  Styles.cpp  emotes.cpp  emotes.h  popitstyles.cpp  popitstyles.h  slapstyles.cpp  slapstyles.h  styles.cpp  styles.h
code/Alear/resources/: ResourceAnimatedTexture.cpp  ResourceAnimatedTexture.h  ResourceGuidList.cpp  ResourceGuidList.h  ResourceHooks.cpp  ResourceHooks.h  ResourceOutfitList.cpp  ResourceOutfitList.h  ResourcePins.cpp  ResourcePins.h
code/CWLib/: AnimBank.cpp  AnimBank.h  Avatar.h  ButtonPrompts.inl  Camera.h  Capture.h  CollisionIterate.h  CollisionQuery.h  ColorCorrection.h  CompactCollision.h  Constraints.cpp  Constraints.h  ConstraintsShared.h  DebugCamera.cpp  DebugCamera.h  DecorationInfo.h  EggLink.h  Explode.cpp  Explode.h  Fart.cpp  Fart.h  FartRO.cpp  FartRO.h  FluidRender.cpp  FluidRender.h  FontEnum.h  GFXApi.h  GameConstants.h  GameEnums.inl  GameShell.h  GetLoginCookieTask.cpp  GetLoginCookieTask.h  GfxPool.cpp  GfxPool.h  GooeyNetworkAction.h  Input.cpp  Input.h  InputMode.h  InventoryCollection.h  InventoryItem.cpp  (+172 more)
code/CWLib/Audio/: FMODFile.h  FModAudioHandle.h
code/CWLib/gooey/: GooeyCarousel.h  GooeyContainerStyles.inl  GooeyImage.cpp  GooeyImage.h  GooeyNode.h  GooeyNodeContainer.h  GooeyNodeLeaf.h  GooeyNodeManager.cpp  GooeyNodeManager.h  GooeyNodeManagerEnums.h  GooeyRender.cpp  GooeyRender.h  GooeyScriptInterface.h  GooeySizing.h  ScriptedGooeyWrapper.h
code/CWLib/network/: NetworkEnum.inl  NetworkManager.cpp  NetworkManager.h  NetworkPartiesData.h  NetworkUnity.cpp  NetworkUtilsNP.cpp  NetworkUtilsNP.h  RNPLoadingTask.h  RNPManager.h
code/CWLib/poppet/: PoppetGooey.h  PoppetLimits.h  PoppetUtilsEditState.h  ScriptObjectPoppet.h
code/CWLib/savegame/: Quick.h
code/CWLib/scriptobjects/: ScriptObjectCustom.h  ScriptObjectResource.h
code/CWLib/vm/: ConvertTypes.h  InstanceLayout.cpp  InstanceLayout.h  NativeFunctionCracker.h  NativeRegistry.cpp  NativeRegistry.h  ScriptArguments.h  ScriptContext.cpp  ScriptContext.h  ScriptFunction.cpp  ScriptFunction.h  ScriptInstance.cpp  ScriptInstance.h  ScriptObject.cpp  ScriptObject.h  ScriptVariant.cpp  ScriptVariant.h  VMInstruction.h  VMTypes.cpp  VMTypes.h  VirtualMachine.cpp  VirtualMachine.h
code/CoreLib/: BitUtils.h  BranchDefines.h  CalendarTime.h  Clock.h  Colour.cpp  Colour.h  CritSec.h  DebugLog.h  Directory.cpp  Directory.h  Enum.h  GUIDHashMap.cpp  GameUpdateStage.cpp  GameUpdateStage.h  GuidHash.cpp  GuidHash.h  GuidHashMap.h  HTTPClient.cpp  HTTPClient.h  Hash.cpp  Hash.h  JobManager.cpp  JobManager.h  MMString.cpp  MMString.h  ParasiticVector.h  ReflectionVisitable.h  Serialise.cpp  Serialise.h  SerialiseEnums.h  SerialiseRevision.h  StringUtil.cpp  StringUtil.h  TextRange.h  TextStream.h  aasortshared.h  clock.cpp  fifo.cpp  fifo.h  filepath.cpp  (+18 more)
code/CoreLib/cell/: DebugLog.cpp  DebugLog.h  filepath.cpp  thread.cpp  thread.h
code/Ikaros/Sync/: Bootstrap.cpp  Bootstrap.h  Cache.cpp  Cache.h  Client.cpp  Client.h  Database.cpp  Database.h  LoadThread.cpp  Messages.h  Serialise.h  Shared.h  Types.h
code/PrxLib/: hook.cpp  hook.h  json.cpp  json.h  json_ext.h  mmalex.cpp  mmalex.h  ppcasm.h  printf.cpp
code/SM64/sm64/: avatar.cpp  avatar.h  init.cpp  init.h  level.cpp  level.h
code/Spuge/: frustcull.h  raycast.h  spring.h
code/Std/: hook.cpp  hook.h  json.cpp  json.h  json_ext.h  mmalex.cpp  ppcasm.h  printf.cpp
sdk/fmod/: fmod.h  fmod_event.h
sdk/libsm64/include/: macros.h
sdk/libsm64/include/PR/: os.h  os_eeprom.h
tools/spu/: readjoint.mod  readjoint.sbu  readjoint.sbu.mod  spu.js
usrdir/: sprx_patch.yml
usrdir/gamedata/alear/: boot.map  config.json  databases.json  servers.json
usrdir/gamedata/alear/clips/: 2dtest.json  2dtest_flipped.json  3dtest.json  3dtest_flipped.json  3dtest_half.json  lerptest.json  objectest.json  playertest.json  (+1 more)
usrdir/gamedata/audio/: stings.fev  stings.fsb
(+24 files in other folders)
